[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[tool.setuptools_scm]

[tool.black]
line-length = 120
skip-string-normalization = true
preview = true
exclude = '''
/(
    \.git
  | \.idea
  | build
  | dist
  | venv
  | env
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib;"
]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'docs',
    'venv',
    'env'
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39
skip_missing_interpreters = true
skipsdist = true

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
deps = -r requirements.txt
commands =
    pytest --junitxml=test_report.xml
"""
