[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[tool.setuptools_scm]

[tool.black]
line-length = 120
skip-string-normalization = true
preview = true
exclude = '''
/(
    \.git
  | \.idea
  | build
  | dist
  | venv
  | env
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib;"
]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'docs',
    'venv',
    'env'
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310
skip_missing_interpreters = true
skipsdist = true

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps = -r requirements.txt
commands =
    pytest --junitxml=test_report.xml
"""

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
    "docs/_build"
]

line-length = 120

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"insolver/serving/django_insolver/apps/drf_serving/*" = ["F401", "F403", "F405"]
