[tool.poetry]
name = "insolver"
version = "0"
description = "Insolver is low-code machine learning library, initially created for the insurance industry."
authors = ["Mindset Team <request@mind-set.ru>"]
homepage = "http://insolver.io/"
repository = "https://github.com/MindSetLib/Insolver"
documentation = "https://insolver.readthedocs.io/"
keywords = ["insurance", "machine learning"]
license = "MIT"
readme = "README.md"
packages = [{include = "insolver"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
include = [
    "insolver/report/*.html",
    "insolver/report/*.css",
    "insolver/report/*.js",
    "insolver/report/*.css.map",
    "insolver/report/*.js.map"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MindSetLib/Insolver/issues"
"Documentation" = "https://insolver.readthedocs.io/en/stable/"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.22.0"
pandas = ">=1.2.0"
scipy = ">=1.10.0"
scikit-learn = ">=1.3.2"
xgboost = ">=1.6.1"
lightgbm = ">=3.2.0"
catboost = ">=1.0.0"
hyperopt = ">=0.2.5"
matplotlib = ">=3.4.3"
plotly = ">=5.3.1"
seaborn = ">=0.12.2"
shap = ">=0.39.0"
h2o = ">=3.46.0.1"
statsmodels = {version = ">=0.13.1", optional = true}
dill = ">=0.3.4"
numba = ">=0.58.0"
lime = {version = ">=0.2.0.1", optional = true}
Jinja2 = {version = ">=3.1.5", optional = true}
ydata-profiling = {version = ">=4.7.0", optional = true}
Flask = {version = ">=2.3.2", optional = true}
fastapi = {version = ">=0.109.1", optional = true}
uvicorn = {extras = ["standard"], version = ">=0.27", optional= true}
pydantic = {version = ">=2", optional = true}
gunicorn = {version = ">=20.0.4", optional = true}
Django = {version = ">=4.2.18", optional= true}
djangorestframework = {version = ">=3.15.2", optional = true}
sympy = {version = ">=1.9", optional = true}
dice-ml = {version = "*", optional = true}
alibi = { version = "*", optional = true}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = ">=24.4.2"}
mypy = ">=0.971"
pre-commit = ">=2.19.0"
pytest = ">=6.2.5"
pytest-cov = ">=2.12.1"
ruff = ">=v0.4.4"
tox = ">=3.24.3"
locust = ">=2.9.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-applehelp = "*"
sphinxcontrib-devhelp = "*"
sphinxcontrib-htmlhelp = "*"
sphinxcontrib-jsmath = "*"
sphinxcontrib-qthelp = "*"
sphinxcontrib-serializinghtml = "*"

[tool.poetry.extras]
feature_engineering = ["statsmodels"]
feature_monitoring = ["Jinja2"]
interpretation = ["alibi", "dice-ml", "lime"]
report = ["Jinja2", "lime", "ydata-profiling"]
serving = ["Flask", "fastapi", "uvicorn", "pydantic", "gunicorn", "Django", "djangorestframework", "sympy", "Jinja2"]
all = ["statsmodels", "alibi", "dice-ml", "lime", "ydata-profiling", "Flask", "fastapi", "uvicorn", "pydantic", "gunicorn", "Django", "djangorestframework", "sympy", "Jinja2"]

[tool.poetry.scripts]
insolver_serving = 'insolver.serving.run_service:run'

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
preview = true
exclude = '''
/(
    \.git
  | \.idea
  | build
  | dist
  | venv
  | env
  | .venv
)/
'''


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib;"
]


[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'docs',
    'venv',
    'env'
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310
skip_missing_interpreters = true
skipsdist = true

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps = -r requirements.txt
commands =
    pytest --junitxml=test_report.xml
"""


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
    "docs/_build"
]

line-length = 120

lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"insolver/serving/django_insolver/apps/drf_serving/*" = ["F401", "F403", "F405"]
