[metadata]
name = insolver
description = Insolver is low-code machine learning library, initially created for the insurance industry.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://insolver.io/
author = Mindset Team
author_email = request@mind-set.ru
license = MIT
license_files = LICENSE
keywords = insurance, machine learning
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/MindSetLib/Insolver/issues
    Documentation = https://insolver.readthedocs.io/en/stable/
    Source Code = https://github.com/MindSetLib/Insolver
